[package]
name = "rpu"
version = "0.1.1"
edition = "2021"
authors = ["Markus Moenig"]
description = "A procedural 3D scene programming language"
license = "MIT"
repository = "https://github.com/markusmoenig/RPU.git"

[dependencies]
rustc-hash = "1.1"
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
maths-rs = { version = "0.2.4", features = ["short_types", "short_hand_constructors", "casts", "serde"] }
png = "0.17"
viuer = "0.6"
image = "0.24.6"
rand = "0.8"
rust-embed = { version = "6.8", default-features = true, features = ["include-exclude"] }
fontdue = "0.7.3"
